--- a/ex1/MainWindow.xaml
+++ b/ex1/MainWindow.xaml
@@ -12,21 +12,15 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <TextBlock Text="Size" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20,0,0,0"/>
         <TextBlock Grid.Column="1" Text="Toppings" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,60,0"/>
-        <StackPanel Name="sizeOneStackPanel" Grid.Row="1"  VerticalAlignment="Center" Margin="10,0,0,0"/>
-        <StackPanel Name="sizeTwoStackPanel" Grid.Row="2" VerticalAlignment="Center"  Margin="10,0,0,0"/>
-        <StackPanel Name="sizeThreeStackPanel" Grid.Row="3" VerticalAlignment="Center"  Margin="10,0,0,0"/>
-        <StackPanel Name="toppingOneStackPanel" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" />
-        <StackPanel Name="toppingTwoStackPanel" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"/>
-        <StackPanel Name="toppingThreeStackPanel" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center"/>
-        <StackPanel Name="priceStackPanel" Grid.Row="4" Grid.ColumnSpan="2">
+        <StackPanel x:Name="sizePanel" Grid.Row="1"/>
+        <StackPanel x:Name="toppingsPanel" Grid.Row="1" Grid.Column="1"/>
+        <StackPanel Name="priceStackPanel" Grid.Row="2" Grid.ColumnSpan="2">
             <TextBlock Name="priceTextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </StackPanel>
     </Grid>
